// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EditableWorkflowName NOT Read-only Renders a title that can be edited and saved 1`] = `
<EditableWorkflowName
  api={
    Object {
      "setWfName": [Function],
    }
  }
  editClass=""
  isReadOnly={false}
  value="Test Title"
  wfId={808}
>
  <div
    onKeyPress={[Function]}
  >
    <RIETextArea
      change={[Function]}
      classEditing="editable-title-field-active"
      className=""
      propName="value"
      rows={1}
      value="Test Title"
    >
      <span
        className=""
        onClick={[Function]}
        onFocus={[Function]}
        tabIndex="0"
      >
        <span>
          Test Title
        </span>
      </span>
    </RIETextArea>
  </div>
</EditableWorkflowName>
`;

exports[`EditableWorkflowName NOT Read-only Renders a title that can be edited and saved 2`] = `
<EditableWorkflowName
  api={
    Object {
      "setWfName": [Function],
    }
  }
  editClass=""
  isReadOnly={false}
  value="Test Title"
  wfId={808}
>
  <div
    onKeyPress={[Function]}
  >
    <RIETextArea
      change={[Function]}
      classEditing="editable-title-field-active"
      className=""
      propName="value"
      rows={1}
      value="Test Title"
    >
      <textarea
        className="editable-title-field-active"
        defaultValue="Test Title"
        disabled={false}
        onBlur={[Function]}
        onInput={[Function]}
        onKeyDown={[Function]}
        rows={1}
      />
    </RIETextArea>
  </div>
</EditableWorkflowName>
`;

exports[`EditableWorkflowName Read-only Renders plain title 1`] = `
<div
  onKeyPress={[Function]}
>
  <span
    className=""
  >
    Test Title
  </span>
</div>
`;
